# catnip-seq

./: .gitignore  Dockerfile  Makefile  README.md  base-invaders-environment.yml  catnip-env.yml  cluster-extractor.py  conda_env_setup.sh  config.sh  fasta_cleaner_helper.py  helper.py  identify_heterogenous_clusters.py  install.sh  mapping_helper.py  pyproject.toml  pytest.ini  run-bowtie-aligner.sh  run-bowtie-indexer.sh  run-cdhit.sh  run_tests.sh  workflow.bash  workflow.sh  workflow_parallel.sh
catnip.egg-info/: SOURCES.txt  entry_points.txt
mico-90/: mico_90pcnt_lrg_mix.fasta  pre-process-sam.ipynb
mico-90/test-mbt/: Hybotidae_cecidomyiidae.tsv  matrix.json
src/: catnip.sh  catnip_cli.py  cluster-extractor.py  cluster_extractor.py  compile_interclust.py  fasta_cleaner_helper.py  identify_heterogenous_clusters.py  mapping_helper.py  pre-process-bam.py  pre_process_bam.py  run-bowtie-aligner.sh  run-cdhit.sh  run_bowtie_aligner.sh  run_cdhit.sh
src/catnip/: apply_thresholds.py  catnip.sh  catnip_cli.py  clean_output.py  compile_interclust.py  mapping_helper.py  (+3 more)
src/catnip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test-case-PR1-90prcnt/: filtered_processed_sam.tsv
test-cases/: min_processed.tsv  ntx_processed.tsv
test-micointf-mil/: coi_micointf_mil.fasta
test-workflow/: coi_micointf_mil_mapping.tsv  final_output_interclst.tsv
tests/: cluster2.fasta  origin_fasta.fasta  self-alignment-only.bam  test_cluser_file.clstr  test_cluster_extractor.py  test_compile_interclust.py  test_identify_heterogenous_clusters.py  test_mapping_file.tsv  test_pre_process_bam.py
(+31 files in other folders)
