[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catnip-seq"

version = "0.1.4"

authors = [
  { name="Camila Babo", email="camila.babo@cibio.up.pt" },
]

description = "Explore nucleotide divergence and sequence resolution across user-defined categories."

readme = "README.md"

requires-python = ">=3.9"

license = { text = "GPL-3.0-or-later" }

dependencies = [
    "pysam",
    "pandas",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/CIBIO-BU/catnip"
Issues = "https://github.com/CIBIO-BU/catnip/issues"

[project.scripts]
catnip = "catnip.catnip_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
catnip = ["*.sh"]

[tool.setuptools]
license-files = ["LICEN[CS]E*"]